@@ -1,10 +1,8 @@
 package io.avaje.inject.generator;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.ServiceLoader;
@@ -61,37 +59,31 @@ public final class Processor extends AbstractProcessor {
   void loadProvidedFiles(Filer filer) {
 
     try {
-      var resource =
-            filer
+      final var resource =
+          filer
               .getResource(StandardLocation.CLASS_OUTPUT, "", "target/avaje-plugin-provides.txt")
               .toUri()
               .toString()
               .replace("/target/classes", "");
-      try (InputStream inputStream = new URL(resource).openStream();
-          BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
-        String line;
-        while ((line = reader.readLine()) != null) {
-          pluginFileProvided.add(line);
-        }
+      try (var lines = Files.lines(Paths.get(new URI(resource)))) {
+        lines.forEach(pluginFileProvided::add);
       }
-    } catch (IOException e2) {
+    } catch (final Exception e) {
+      // could not find avaje-plugin-provides.txt
     }
 
     try {
-      var resource =
-            filer
+      final var resource =
+          filer
               .getResource(StandardLocation.CLASS_OUTPUT, "", "target/avaje-module-provides.txt")
               .toUri()
               .toString()
               .replace("/target/classes", "");
-      try (InputStream inputStream = new URL(resource).openStream();
-          BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
-        String line;
-        while ((line = reader.readLine()) != null) {
-          moduleFileProvided.add(line);
-        }
+      try (var lines = Files.lines(Paths.get(new URI(resource)))) {
+        lines.forEach(pluginFileProvided::add);
       }
-    } catch (IOException e2) {
+    } catch (final Exception e2) {
+      // could not find avaje-module-provides.txt
     }
   }
 
